0.0.1 (November 2nd, 2009) - Jeff Kreeftmeijer
* Initial commit (copy of the original wysihat toolbar)